# QCA

./: .gitignore  LICENSE  README.md  pyproject.toml  railway.toml  sitecustomize.py
config/: qca_config.json
data/qca/seeds/: manual_event_overrides.json
scripts/: run_qca_replication.py
src/qca_replication/: __init__.py  __main__.py  api.py  clients.py  config.py  discovery.py  features.py  models.py  pipeline.py  reporting.py  utils.py
tests/: test_qca_api.py  test_qca_math.py  test_qca_pipeline.py
