[project]
name = "qca-replication"
version = "1.0.0"
description = "QCA API and closest-public replication pipeline for Quantum Capital Allocation Papers VIII-IX"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
analysis = [
  "numpy>=2.2",
  "scipy>=1.16",
  "scikit-learn>=1.8",
]
scraping = [
  "beautifulsoup4>=4.14",
  "lxml>=6.0",
]
finbert = [
  "transformers>=4.48",
  "torch>=2.6",
]
full = [
  "beautifulsoup4>=4.14",
  "lxml>=6.0",
  "numpy>=2.2",
  "scipy>=1.16",
  "scikit-learn>=1.8",
  "torch>=2.6",
  "transformers>=4.48",
]
